--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,25 @@
 .term {
   border-radius: 10px;
-  background-color: yellow;
+  background-color: #ffe6e6;
+  padding: 20px;
+  font-weight: bold;
+  text-align: center;
+  max-width: 200px;
+  margin: 15px;
 }
 
 .definition {
   border-radius: 10px;
-  background-color: blue;
+  background-color: #ffff80;
+  text-align: center;
+  max-width: 200px;
+  margin: 15px;
+  display:none;
 
+}
+
+h2 {
+  text-align: center;
+  font-weight: bolder;
+  color: red;
 }
